--- a/python/Makefile
+++ b/python/Makefile
@@ -1,2 +1,13 @@
+.PHONY: clean reinstall test all
+
+all: reinstall test
+
 clean:
-	$(RM) -rf *.so *.egg-info *.pyc cython/cyscs.c dist build cyscs.c
+	-pip uninstall scs
+	$(RM) -rf *.so *.egg-info *.pyc cython/scs.c dist build scs.c
+
+reinstall: clean
+	pip install -e .
+
+test:
+	nosetests -vs
